[gd_scene load_steps=7 format=3 uid="uid://llccokf4wxa5"]

[ext_resource type="Script" path="res://tank_p2_menu.gd" id="1_cnsmg"]
[ext_resource type="PackedScene" uid="uid://bbscirgbc23sn" path="res://projectile_menu.tscn" id="2_6l0ip"]
[ext_resource type="Texture2D" uid="uid://dysqx8y2hbe14" path="res://p2-tank-hull.png" id="3_oucrk"]
[ext_resource type="Texture2D" uid="uid://djdlxtkrbvbsl" path="res://p2-tank-turret.png" id="4_cqwxk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vgk7y"]
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nev50"]
radius = 29.0

[node name="TankP2Menu" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_cnsmg")
projectile = ExtResource("2_6l0ip")
metadata/p2 = true

[node name="Hull" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_oucrk")

[node name="Turret" type="Sprite2D" parent="."]
position = Vector2(0, -4.64916e-06)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_cqwxk")
offset = Vector2(2.08165e-12, -100)

[node name="ProjectileSpawn" type="Node2D" parent="Turret"]
position = Vector2(2.08165e-12, -240)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vgk7y")
one_way_collision_margin = 4.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_nev50")
one_way_collision_margin = 4.0
debug_color = Color(0.992157, 0, 0.27451, 0.419608)

[node name="DamageEffect" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.313726, 1, 1)
offset_left = -30.0
offset_top = -53.0
offset_right = 30.0
offset_bottom = -48.0
step = 1.0
allow_lesser = true
show_percentage = false

[node name="Respawn" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DamageEffect" to="." method="_on_damage_effect_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
